* reworked ApplicationEventMulticaster to have a "multicastEvent" method rather than derive from ApplicationListener
* renamed ApplicationEventMulticasterImpl to SimpleApplicationEventMulticaster, indicating alternative implementations
* AbstractApplicationContext auto-detects an "applicationEventMulticaster" bean, using it instead of the default

Package org.springframework.core
* added ClassPathResourcePatternResolver which can retrieve multiple class path resources with the same name
* PathMatchingResourcePatternResolver derives from ClassPathResourcePatternResolver to inherit its behavior

Package org.springframework.dao
* fixed DataAccessUtils' "requiredUniqueResult" method, to correctly throw an IncorrectResultSizeDataAccessException

Package org.springframework.jdbc
* DataSourceUtils' "closeConnectionIfNecessary" logs error on SQLException rather than rethrowing an exception
* removed CannotCloseJdbcConnectionException, as it is not used anymore
* DataSourceTransactionManager closes JDBC Connection if "doBegin" fails
* DataSourceTransactionManager manages nested transactions via JDBC 3.0 Savepoints
* DataSourceTransactionObject implements SavepointManager to allow for savepoint management via TransactionStatus
* refactored Prepared/CallableStatement.setXxx method invocations into JdbcUtils.setParameters utility method
* added SqlTypeValue abstract class with callback method "setTypeValue" that will handle all database specific code
* JdbcTemplate always passes SQL string to SQLExceptionTranslator, even for static queries and updates
* added support for BLOB/CLOB parameters to SqlUpdate and StoredProcedure
* added BatchSqlUpdate class to jdbc.object package, for convenient execution of batch updates
* adapted CommonsDbcpNativeJdbcExtractor for Commons DBCP 1.2, to support both DBCP 1.1 and 1.2
* rewrote JBossNativeJdbcExtractor with reflection, to also support ResultSet unwrapping for JBoss 3.2.4