@@ -23,15 +23,32 @@ import org.springframework.core.io.Resource;
 /**
  * Strategy interface for resolving a location pattern into Resource objects.
  *
- * <p>Can be used with any sort of location pattern: Input patterns have
- * to match the strategy implementation. This interface just specifies
- * the conversion method rather than a specific pattern format.
+ * <p>Can be used with any sort of location pattern (e.g. "/WEB-INF/*-context.xml"):
+ * Input patterns have to match the strategy implementation. This interface just
+ * specifies the conversion method rather than a specific pattern format.
+ *
+ * <p>This interface also suggests a new resource prefix "classpath*" for all
+ * matching resources from the class path. Note that the resource location is
+ * expected to be a path without placeholders in this case (e.g. "/beans.xml");
+ * JAR files or classes directories can contain multiple files of the same name.
  *
  * @author Juergen Hoeller
  * @since 01.05.2004
+ * @see #CLASSPATH_URL_PREFIX
+ * @see ClassPathResourcePatternResolver
  * @see PathMatchingResourcePatternResolver
  */
 public interface ResourcePatternResolver {
+
+	/**
+	 * Pseudo URL prefix for all matching resources from the class path.
+	 * This differs from ResourceLoader's classpath URL prefix in that it
+	 * retrieves all matching resources for a given name (e.g. "/beans.xml"),
+	 * for example in the root of all deployed JAR files.
+	 * @see org.springframework.core.io.ResourceLoader#CLASSPATH_URL_PREFIX
+	 * @see ClassPathResourcePatternResolver
+	 */
+	String CLASSPATH_URL_PREFIX = "classpath*:";
 
 	/**
 	 * Resolve the given location pattern into Resource objects.
