@@ -37,6 +37,8 @@ Package org.springframework.context
 * AbstractApplicationContext auto-detects an "applicationEventMulticaster" bean, using it instead of the default
 
 Package org.springframework.core
+* fixed UrlResource to correctly return the underlying URL on "getURL"
+* defined "classpath*:" prefix in ResourcePatternResolver interface, for retrieving all matching class path resources
 * added ClassPathResourcePatternResolver which can retrieve multiple class path resources with the same name
 * PathMatchingResourcePatternResolver derives from ClassPathResourcePatternResolver to inherit its behavior
 
